# histo.rs

./: .ignore  .jenkinsfile  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: snap.yml  test.yml
snap/: snapcraft.yaml
src/: data.rs  error.rs  graph.rs  lib.rs  main.rs
tests/: example.txt  example_scoped.txt  simple.bats  strace.txt
