[package]
name = "histo-log"
version = "0.1.1"
edition = "2021"
authors = ["Greg Whiteley <greg.whiteley@gmail.com>"]
license = "GPL-3.0-or-later"

repository = "https://github.com/whitty/histo-log"
readme = "README.md"

description = "CLI tools for generating histograms from log files"
categories = ["command-line-utilities"]

exclude = [".jenkinsfile"]

[dependencies]
asciigraph = "^0.6.0"
# fix versions for older rust
clap = { version = "=4.0.32", features = ["derive"] }
clap_lex = { version = "=0.3.0" }
regex = { version = "=1.9.6" }
rust_decimal = "1.33.1"
